tetriminos loading and debug done

--- a/lib/my/Makefile
+++ b/lib/my/Makefile
@@ -30,6 +30,7 @@ SRC =	my_getnbr_base.c					\
 		my_strupcase.c						\
 		my_str_to_word_array.c				\
 		my_is_char_alpha.c					\
+		my_atoi.c							\
 		printf/get_int_digits.c 			\
 		printf/my_printf.c					\
 		printf/my_put_long.c				\
